--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "express": "^4.16.4",
     "history": "^4.7.2",
     "mogoose": "^3.1.8",
-    "nodemon": "^1.18.10",
+    "mongoose": "^5.4.22",
     "perfect-scrollbar": "^1.4.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "swagger-ui-express": "^4.0.2",
+    "yamljs": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,6 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "nodemon": "nodemon --config nodemon.json --exec npm run dev ",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -33,5 +36,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  }
 }
